--- a/templates/personal_page/antonina.html.twig
+++ b/templates/personal_page/antonina.html.twig
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Antonina</title>
-    <link rel="stylesheet" href="{{ asset('styles/app.css') }}">
+    <link rel="stylesheet" href="{{ asset('styles/antonina.css') }}">
 </head>
 <body>
     <div class="container">
