--- a/templates/daema/login.html.twig
+++ b/templates/daema/login.html.twig
@@ -28,7 +28,7 @@
                         </div>
 
                         <div class="flex justify-center mb-6">
-                            <button class="btn w-auto text-white bg-blue-600"> Log In </button>
+                            <button class="btn w-auto text-white bg-blue-600 hover:bg-blue-700"> Log In </button>
                         </div>
                     </div>
                 </div>
