--- a/templates/daema/home.html.twig
+++ b/templates/daema/home.html.twig
@@ -60,7 +60,7 @@
             </div> <!-- / services -->
             
             <div class="flex justify-center mb-6">
-                <a href="{{ path('app_service') }}" class="btn w-auto font-normal text-black bg-[#7ddf2b] hover:bg-[#72cc28]"> Edit Profile</a>
+                <a href="{{ path('daema_dashboard') }}" class="btn w-auto font-normal text-black bg-[#7ddf2b] hover:bg-[#72cc28]"> Edit Profile</a>
             </div>
         </section>
 {% endblock %}
