--- a/templates/daema/login.html.twig
+++ b/templates/daema/login.html.twig
@@ -5,36 +5,35 @@
 {% block stylesheets %}<link rel="stylesheet" href="{{ asset('styles/daema/login.css')}}">{% endblock %}
 
 {% block body %}
-<div class="bg-gradient-to-r from-rose-100 to-teal-100">
+<div class="bg-gradient-to-r from-rose-100 to-teal-100 overflow-hidden">
 
-        <!-- ============================================================== -->
-        <!-- Start Page Content here -->
-        <!-- ============================================================== -->
+    <!-- ============================================================== -->
+    <!-- Start Page Content here -->
+    <!-- ============================================================== -->
 
-        <div class="h-screen w-screen flex justify-center items-center">
+    <div class="h-screen w-screen flex justify-center items-center">
 
-            <div class="2xl:w-1/4 lg:w-1/3 md:w-1/2 w-full">
-                <div class="card overflow-hidden sm:rounded-md rounded-none bg-slate-50 shadow">
-                    <div class="p-6">
+        <div class="2xl:w-1/4 lg:w-1/3 md:w-1/2 w-full">
+            <div class="card overflow-hidden sm:rounded-md rounded-none bg-slate-50 shadow">
+                <div class="p-6">
 
-                        <div class="mb-4">
-                            <label class="block text-sm font-medium text-gray-600 mb-2" for="LoggingUsername">Username</label>
-                            <input id="LoggingUsername" class="form-input" type="username" placeholder="Enter your username" >
-                        </div>
+                    <div class="mb-4">
+                        <label class="block text-sm font-medium text-gray-600 mb-2" for="LoggingUsername">Username</label>
+                        <input id="LoggingUsername" class="form-input" type="username" placeholder="Enter your username" required>
+                    </div>
 
-                        <div class="mb-4">
-                            <label class="block text-sm font-medium text-gray-600 mb-2" for="loggingPassword">Password</label>
-                            <input id="loggingPassword" class="form-input" type="password" placeholder="Enter your password" >
-                        </div>
+                    <div class="mb-4">
+                        <label class="block text-sm font-medium text-gray-600 mb-2" for="loggingPassword">Password</label>
+                        <input id="loggingPassword" class="form-input" type="password" placeholder="Enter your password" required>
+                    </div>
 
-                        <div class="flex justify-center mb-6">
-                            <button class="btn w-auto text-white bg-blue-600 hover:bg-blue-700"> Log In </button>
-                        </div>
+                    <div class="flex justify-center mb-6">
+                        <button type"submit" class="btn w-auto text-white bg-blue-600 hover:bg-blue-700"> Log In </button>
                     </div>
                 </div>
             </div>
         </div>
-
     </div>
+</div>
 
 {% endblock %}
