--- a/assets/styles/catalin-bera/catalin-bera.css
+++ b/assets/styles/catalin-bera/catalin-bera.css
@@ -1,19 +1,31 @@
 body {
     margin: 0;
-    font-family: Arial, Helvetica, sans-serif;
+    padding:0;
+    font-family: 'Times New Roman', Times, serif;
+    font-style: italic;
 }
 
  .content-wrap {
    padding: 16px;
-   background: rgb(229, 248, 255);
+   background: rgb(229, 300, 235);
 
+ }
+.title{
+   color: lightgreen;
+   margin-left: 25%;
+   font-style: normal;
+   font-weight: bold;
+}
+ h2{
+   font-style: bold;
+   font-size: 50px;
  }
 
 
  .content-wrap > img {
-    display: block;
-    width: 45%;
-    float: left;
+   display: block;
+   width: 25%;
+   float: right;
 }
 
 
