--- a/templates/catalin-bera/catalin-bera.html.twig
+++ b/templates/catalin-bera/catalin-bera.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
 
-{% block title %} Catalin Bera {% endblock}
+ {% block title %} Catalin Bera {% endblock %}
 
  {% block stylesheets %}
      <link rel="stylesheet" href="{{ asset('styles/catalin-bera/catalin-bera.css') }}">
@@ -9,18 +9,14 @@
 
  {% block body %}  
     <div class="content-wrap">
-        <h1>Catalin Bera</h1>
+        <h1 class="title">Catalin Bera</h1>
         <img src="{{ asset('images/catalin-bera.jpg') }}" alt="catalin bera" class="profile-picture">
         <div class="content">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed semper sem a maximus vulputate. Nullam tellus tellus, tincidunt vel dapibus sed, auctor in sapien. Aenean euismod, enim in ultricies consequat, ex ligula semper ante, ut fringilla tortor justo sed lectus. Vestibulum convallis, lorem at commodo finibus, orci tellus ultrices risus, id aliquet ante est sed lectus. Donec eget dui diam. Sed in auctor felis. Vestibulum eu gravida lorem. Ut et est aliquet, dignissim neque in, convallis ex.</p>
-            <p>Quisque tincidunt erat a dignissim malesuada. Morbi pulvinar felis tincidunt elit porta, in blandit risus placerat. In ultrices feugiat aliquet. Sed ultricies cursus massa et facilisis. Vestibulum rhoncus ipsum mattis orci fringilla, sed pellentesque dolor suscipit. Vivamus accumsan sollicitudin nibh non pellentesque. Nulla facilisi. Maecenas laoreet, erat sit amet blandit feugiat, diam mauris faucibus eros, a semper odio orci sit amet erat. Sed libero dolor, gravida sed eleifend in, tempus sed risus. Sed efficitur ex ac diam vulputate egestas. Mauris diam sapien, tempor a enim vel, luctus egestas turpis. Aenean ut dolor nisl. Proin mattis consequat libero, quis laoreet nibh molestie eget. Maecenas sit amet suscipit tellus. Sed nibh tellus, tincidunt nec posuere vel, pretium eget purus. Sed lacinia risus et bibendum fermentum.</p>
-            <p>Donec sapien erat, porttitor id egestas id, sagittis a magna. Vivamus eu consectetur nisl. Donec auctor condimentum ex, sed mollis lorem. Pellentesque rutrum ac lacus id maximus. Aliquam sed commodo magna. Pellentesque diam lacus, tincidunt in lacus vitae, vestibulum posuere quam. Aliquam id sem gravida, ornare orci quis, egestas tortor. Aliquam egestas nisl est, a condimentum lorem posuere sit amet. Donec mattis, lorem quis dignissim iaculis, orci leo tempor libero, nec fringilla ligula erat nec ipsum. Aliquam a tellus blandit, lobortis lectus ut, hendrerit risus. Cras eget mi vitae sem sagittis pellentesque. Sed non rhoncus felis, sed venenatis mauris. Vivamus commodo nibh vitae varius consequat.</p>
+            <p>Salut! Numele meu este Catalin Bera, student la PABD anul 2. Pasionat de Tehnologie si Gaming.</p>
+            <h2>Hobby-urile mele: </h2>
             <ul>
-                <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
-                <li>Nullam vulputate dolor et nibh posuere mollis.</li>
-                <li>Maecenas consectetur risus vel lorem convallis, pharetra tincidunt elit lobortis.</li>
-                <li>Morbi dictum urna eu nisl feugiat consequat.</li>
-                <li>Sed finibus tortor quis eros vestibulum laoreet.</li>
+                <li>Calatoria.</li>
+                <li>Ski.</li>
             </ul>
         </div>
         <div class="clear"></div>
