added home and style

--- a/templates/eulaur/home.html.twig
+++ b/templates/eulaur/home.html.twig
@@ -1,1 +1,15 @@
-<h1>Test</h1>
+{% block stylesheets %}
+    <link rel="stylesheet" href="{{ asset('styles/eulaur/style.css')}}">
+{% endblock %}
+<body>
+    <div class = "big-container">
+        <img class = "profile-image mid" src = "{{ asset('images/eulaur/profile.png') }}">
+        <h1 class = "mid">Maties Laurentiu</h1>
+        <div class = "hobbies-div mid">
+            <h2 class = "hobby">h1</h2>
+            <h2 class = "hobby">h2</h2>
+            <h2 class = "hobby">h3</h2>
+        </div>
+        <p class = "description mid">aaaaaaaaaaaaaaaaa</p>
+    <div>
+</body>
