--- a/assets/styles/eulaur/dashboard.css
+++ b/assets/styles/eulaur/dashboard.css
@@ -1,79 +1,83 @@
 body {
-    font-family: Arial, sans-serif;
-    background-color: #f4f4f4;
+    font-family: 'Roboto', sans-serif;
+    background-color: #f9f9f9;
     margin: 0;
     padding: 0;
 }
 
 .container {
     width: 80%;
-    margin: 0 auto;
-    background-color: #fff;
+    margin: 50px auto;
     padding: 20px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    margin-top: 50px;
+    background-color: #fff;
     border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
 h1 {
     text-align: center;
     color: #333;
+    margin-bottom: 20px;
 }
 
 .input-container {
     display: flex;
-    justify-content: center;
+    align-items: center;
     margin-bottom: 20px;
 }
 
-input[type="text"] {
-    width: 300px;
-    padding: 10px;
+.input-container input[type="text"] {
+    flex: 1;
+    padding: 12px;
+    border: 1px solid #ddd;
+    border-radius: 4px;
+    font-size: 16px;
     margin-right: 10px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
 }
 
-button {
-    padding: 10px 15px;
+.input-container input[type="submit"] {
+    padding: 12px 20px;
+    background-color: #2196F3;
     border: none;
-    background-color: #28a745;
-    color: white;
+    color: #fff;
     border-radius: 4px;
+    font-size: 16px;
     cursor: pointer;
+    transition: background-color 0.3s;
 }
 
-button:hover {
-    background-color: #218838;
+.input-container input[type="submit"]:hover {
+    background-color: #0e7ae6;
 }
 
-.text-fields-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+a {
+    display: block;
+    text-align: center;
+    margin-top: 20px;
+    color: #555;
+    text-decoration: none;
 }
 
-.text-field {
-    width: 300px;
-    padding: 10px;
-    border: 1px solid #ccc;
+a:hover {
+    text-decoration: underline;
+}
+
+.edit-button {
+    background-color: #2196F3;
+    color: #fff;
+    text-decoration: none;
+    padding: 10px 20px;
+    font-size: 16px;
     border-radius: 4px;
-    margin-bottom: 10px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+    transition: background-color 0.3s ease;
+    
+    /* Positioning */
+    position: fixed;
+    margin-top:0;
+    top: 20px;
+    right: 20px;
 }
 
-.text-field input[type="text"] {
-    width: 80%;
-    border: none;
-    background-color: #fff;
-}
-
-.text-field button {
-    background-color: #dc3545;
-}
-
-.text-field button:hover {
-    background-color: #c82333;
+.edit-button:hover {
+    background-color: #0e7ae6;
 }
