--- a/templates/eulaur/login.html.twig
+++ b/templates/eulaur/login.html.twig
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Text Fields Dashboard</title>
-    <link rel="stylesheet" href="{{ asset('styles/eulaur/dashboard.css')}}">
+    <link rel="stylesheet" href="{{ asset('styles/eulaur/login.css')}}">
 </head>
 <body>
     <div class="container">
-        <h1>Text Fields Dashboard</h1>
+        <h1>Login</h1>
             <form action = "{{path('eulaur_login')}}" method="post">
                 <div class="input-container">
                     <label>Username</label>
