2. Pagină personală (issue minimal)
2. Pagină personală (issue minimal)

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -3,45 +3,10 @@
     <head>
         <meta charset="UTF-8">
         <title>{% block title %}Welcome!{% endblock %}</title>
-        <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text><text y=%221.3em%22 x=%220.2em%22 font-size=%2276%22 fill=%22%23fff%22>sf</text></svg>">
-        {% block stylesheets %}
-        {% endblock %}
-
-        {% block javascripts %}
-            {% block importmap %}{{ importmap('app') }}{% endblock %}
-        {% endblock %}
+        <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚕️</text></svg>">
+        {% block stylesheets %}{% endblock %}
     </head>
     <body>
-        <div class="container relative">
-            {% for label, messages in app.flashes %}
-                {% set alertClass = 
-                    label == 'success' ? 'bg-green-500' : 
-                    label == 'error' ? 'bg-red-500' : '' 
-                %}
-                <div id="flash-messages" class="fixed bottom-16 right-4 z-50">
-                    {% for message in messages %}
-                        <div class="rounded-md shadow-md p-4 text-white {{ alertClass }}">
-                            {{ message }}
-                        </div>
-                    {% endfor %}
-                </div>
-            {% endfor %}
-        </div>
         {% block body %}{% endblock %}
-        <script>
-            document.addEventListener("turbo:load", function() {
-                console.log("Turbo load event fired");
-                var flashMessages = document.getElementById('flash-messages');
-                if (flashMessages) {
-                    console.log("Flash messages found:", flashMessages);
-                    setTimeout(function() {
-                        console.log("Removing flash messages...");
-                        flashMessages.remove();
-                    }, 3000); // Adjust the time (in milliseconds) as needed
-                } else {
-                    console.log("Flash messages not found");
-                }
-            });
-        </script>
     </body>
 </html>
